--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <title>Aula - Portfolio</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@700&family=Raleway:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <title>Aula - Portfolio</title>
+  </head>
+  <body>
+    <main class="container">
+      <header class="header-content">
+        <h1 class="header-logo">Portfo<span class="header-logo-destac">lio</span></h1>
+
+        <nav>
+          <ul class="header-menu">
+            <li><a href="#">Quem Sou</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Experiência</a></li>
+          </ul>
+        </nav>
+
+        <div class="header-content-wrapper">
+          <button class="btn-primary">Mais detalhes</button>
+          <img
+            src="/assets/images/sun.svg"
+            alt="ícone do sol"
+            title="ícones do sol"
+          />
+        </div>
+      </header>
+    </main>
+  </body>
 </html>
