feat: hero styles and structure html

--- a/index.html
+++ b/index.html
@@ -15,27 +15,61 @@
   </head>
   <body>
     <main class="container">
-      <header class="header-content">
-        <h1 class="header-logo">Portfo<span class="header-logo-destac">lio</span></h1>
+      <div class="content">
+        <header class="header-content">
+          <h1 class="header-logo">
+            Portfo<span class="header-logo-destac">lio</span>
+          </h1>
 
-        <nav>
-          <ul class="header-menu">
-            <li><a href="#">Quem Sou</a></li>
-            <li><a href="#">Serviços</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Experiência</a></li>
-          </ul>
-        </nav>
+          <nav>
+            <ul class="header-menu">
+              <li><a href="#">Quem Sou</a></li>
+              <li><a href="#">Serviços</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Experiência</a></li>
+            </ul>
+          </nav>
 
-        <div class="header-content-wrapper">
-          <button class="btn-primary">Mais detalhes</button>
-          <img
-            src="/assets/images/sun.svg"
-            alt="ícone do sol"
-            title="ícones do sol"
-          />
+          <div class="header-content-wrapper">
+            <button class="btn-primary">Mais detalhes</button>
+            <img
+              src="/assets/images/sun.svg"
+              alt="ícone do sol"
+              title="ícones do sol"
+            />
+          </div>
+        </header>
+
+        <div class="hero">
+          <div class="hero-headline">
+            <h2>Front-end Developer, UI Motion Designer.</h2>
+
+            <p>
+              <img
+                src="/assets/images/line-point.svg"
+                alt="line point"
+                title="line point"
+              />
+              Me chamo Aldemir Souza e moro na ensolarada cidade do Recife,
+              Brasil. Gosto de transformar problemas complexos em designs
+              simples, bonitos e intuitivos.
+            </p>
+
+            <div class="buttons-wrapper">
+              <button class="btn-primary-hero">Mais detalhes</button>
+              <button class="btn-secondary-hero">Portfolio</button>
+            </div>
+          </div>
+
+          <div class="hero-image">
+            <img
+              src="/assets/images/undraw_developer_activity_re_39tg 1.svg"
+              alt="Ilustração"
+              title="Ilustração"
+            />
+          </div>
         </div>
-      </header>
+      </div>
     </main>
   </body>
 </html>
