feat: hero arrow and email styles finished

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
               title="Ilustração"
             />
           </div>
+          <div class="hero-email">
+            <a href="mailto:aldemmir17b@gmail.com">aldemmir17b@gmail.com</a>
+          </div>
+        </div>
+        <div class="arrow">
+          <img src="assets/images/chevron-down.svg" alt="" title=""/>
         </div>
       </div>
     </main>
