feat: portfolio - sectio skills styles finished

--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@
 
           <div class="header-content-wrapper">
             <button class="btn-primary">Mais detalhes</button>
-            <img
-              src="/assets/images/sun.svg"
-              alt="ícone do sol"
-              title="ícones do sol"
-            />
+            <span class="icon-sun"></span>
           </div>
         </header>
 
@@ -72,8 +68,71 @@
             <a href="mailto:aldemmir17b@gmail.com">aldemmir17b@gmail.com</a>
           </div>
         </div>
+
         <div class="arrow">
-          <img src="assets/images/chevron-down.svg" alt="" title=""/>
+          <img src="assets/images/chevron-down.svg" alt="" title="" />
+        </div>
+
+        <div class="skills-content">
+          <h2>Skills & Experiências</h2>
+          <img src="/assets/images/line-point-2.svg" alt="" title="" />
+          <p class="subtitle">
+            Usando conceitos e técnicas para projetar sites de alta performace
+            sem perder o foco nos resultados, usabilidade e experiência do
+            usuário.
+          </p>
+
+          <h3>Skills</h3>
+
+          <div class="card-content">
+            <div class="card">
+              <div class="card-wrapper">
+                <div class="car-icon">
+                  <span class="car-icon-figma"></span>
+                </div>
+
+                <span class="card-icon-arrow"></span>
+              </div>
+
+              <h4>UI Design</h4>
+              <p>
+                O segredo está no desenvolvimento dacriatividade para a criação
+                de interfaces.
+              </p>
+            </div>
+            
+            <div class="card">
+              <div class="card-wrapper">
+                <div class="car-icon">
+                  <span class="car-icon-code"></span>
+                </div>
+
+                <span class="card-icon-arrow"></span>
+              </div>
+
+              <h4>Desenvolvimento</h4>
+              <p>
+                Desenvolvimento otimizado no back-end e otimizando o responsivo no front.
+              </p>
+            </div>
+
+            <div class="card">
+              <div class="card-wrapper">
+                <div class="car-icon">
+                  <span class="car-icon-star"></span>
+                </div>
+
+                <span class="card-icon-arrow"></span>
+              </div>
+
+              <h4>Motion Design</h4>
+              <p>
+                Animações para aumentar o engajamento do usuário, de maneira otimizada.
+              </p>
+            </div>
+          </div>
+
+          <h3>Experiências</h3>
         </div>
       </div>
     </main>
