feat: section portfolio finished

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 de interfaces.
               </p>
             </div>
-            
+
             <div class="card">
               <div class="card-wrapper">
                 <div class="car-icon">
@@ -112,7 +112,8 @@
 
               <h4>Desenvolvimento</h4>
               <p>
-                Desenvolvimento otimizado no back-end e otimizando o responsivo no front.
+                Desenvolvimento otimizado no back-end e otimizando o responsivo
+                no front.
               </p>
             </div>
 
@@ -127,13 +128,94 @@
 
               <h4>Motion Design</h4>
               <p>
-                Animações para aumentar o engajamento do usuário, de maneira otimizada.
+                Animações para aumentar o engajamento do usuário, de maneira
+                otimizada.
               </p>
             </div>
           </div>
 
           <h3>Experiências</h3>
+
+          <div class="card-content">
+            <div class="card-experience">
+              <div class="card-experience-wrapper">
+                <div class="card-experience-circle"></div>
+                <span class="car-icon-monitor"></span>
+              </div>
+
+              <h4>Front-end developer</h4>
+              <span>@Agência e-Plus</span>
+              <p>
+                Desenvolvimento e evolução de lojas com plataforma
+                <strong>Vtex CMS</strong>
+              </p>
+              <span class="card-experience-date"
+                >Fevereiro 2021 - Dezembro de 2021</span
+              >
+            </div>
+
+            <div class="card-experience">
+              <div class="card-experience-wrapper">
+                <div class="card-experience-circle"></div>
+                <span class="car-icon-monitor"></span>
+              </div>
+
+              <h4>Front-end developer</h4>
+              <span> @Maeztra Consultoria</span>
+              <p>
+                Evolução de lojas com plataforma
+                <strong>Vtex CMS e Vtex IO</strong>
+              </p>
+              <span class="card-experience-date"
+                >Dezembro - 2021 - Atualmente 2022</span
+              >
+            </div>
+
+            <div class="card-experience">
+              <div class="card-experience-wrapper">
+                <div class="card-experience-circle"></div>
+                <span class="car-icon-figma"></span>
+              </div>
+
+              <h4>Ui Design</h4>
+              <span>@Point do Design</span>
+              <p>
+                Criação e prototipagem de interfaces web com o
+                <strong>Figma</strong>
+              </p>
+              <span class="card-experience-date"
+                >Janeiro - 2019 - Março 2022</span
+              >
+            </div>
+          </div>
         </div>
+
+        <section class="portfolio-content">
+          <h2>Portfolio</h2>
+          <img src="/assets/images/line-point-2.svg" alt="" title="" />
+
+          <div class="portfolio-content-item flex">
+
+            <article class="portfolio-content-item card-large">
+              <img src="/assets/images/undraw_pair_programming_re_or4x.svg" alt="Ilustração">
+              <h3>Point do Design</h3>
+              <span>UI do projeto</span>
+            </article>
+
+            <article class="portfolio-content-item card-small">
+              <img src="/assets/images/undraw_pair_programming_re_or4x.svg" alt="Ilustração">
+              <h3>Point do Design</h3>
+              <span>Desenvolvimento do web site</span>
+            </article>
+
+            <article class="portfolio-content-item card-small">
+              <img src="/assets/images/undraw_pair_programming_re_or4x.svg" alt="Ilustração">
+              <h3>Supro Store Online</h3>
+              <span>Desenvolvimento do web site</span>
+            </article>
+
+          </div>
+        </section>
       </div>
     </main>
   </body>
